@@ -192,3 +192,21 @@ div .t3-workspaces-comments-singleComment-content-title {
 .typo3-workspaces-row-disabled .x-grid3-td-checker {
 	visibility: hidden;
 }
+
+div.x-grid3-row img.t3-icon-extensions-workspaces {
+	display: inline-block !important;
+	width: 17px;
+	visibility: hidden;
+}
+
+div.x-grid3-row-over img.t3-icon-extensions-workspaces {
+	visibility: visible;
+}
+
+img.t3-icon-workspaces-sendtonextstage {
+	background-position: 0 4px !important;
+}
+
+img.t3-icon-workspaces-sendtoprevstage {
+	background-position: 0 4px !important;
+}
